--- a/personal/templates/home.html
+++ b/personal/templates/home.html
@@ -10,11 +10,11 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 text-center text-lg-start">
-                <h1 class="display-4 fw-bold mb-3 text-white">Hi, I'm <span class="text-warning">John Doe</span></h1>
+                <h1 class="display-4 fw-bold mb-3 text-white">Hi, I'm <span class="text-warning">JOY GACHERI</span></h1>
                 <p class="lead text-white mb-4" typed="a Full Stack Developer, a Frontend Developer, a Problem Solver">
                 I am <span class="typed-text"></span><span class="typed-cursor">|</span>
                 </p>
-                <p class="fs-5 text-white-50 mb-4">I’m a Computer Science student, developer, and problem solver who loves building digital solutions and exploring innovative ideas. With a strong foundation in web development and data analytics, I combine creativity and technical skills to craft impactful projects and entrepreneurial ventures.</p>
+                <p class="fs-5 text-white-50 mb-4">I’m a Mathematics and Computer Science student, developer, and problem solver who loves building digital solutions and exploring innovative ideas. With a strong foundation in web development and data analytics, I combine creativity and technical skills to craft impactful projects and entrepreneurial ventures.</p>
                 <div class="d-flex justify-content-center justify-content-lg-start gap-3">
                     <a href="#projects" class="btn btn-warning btn-lg"><i class="fas fa-eye me-2"></i>View My Work</a>
                     <a href="#contact" class="btn btn-outline-light btn-lg"><i class="fas fa-envelope me-2"></i>Contact Me</a>
